fixed card header spacing

--- a/src/App.css
+++ b/src/App.css
@@ -63,8 +63,10 @@ h1{
 } */
 
 /* Header/Nav */
-header {
+
+.welcome {
   font-family: "Press Start 2P", cursive;
+  margin-bottom: 0px;
 }
 
 nav {
