--- a/src/components/styles/Home.css
+++ b/src/components/styles/Home.css
@@ -1,15 +1,15 @@
 .fName {
   color: var(--green);
-  /* font-size: 100px; */
+  font-size: 75px;
   font-family: "Press Start 2P", cursive;
-  margin-top: 25px;
+  margin-top: 50px;
   text-shadow: -2px 0px 0px var(--black), 2px 0px 0px var(--black),
   0px -2px 0px var(--black), 0px 2px 0px var(--black);
 }
 
 .lName {
   color: var(--pink);
-  /* font-size: 62px; */
+  font-size: 45px;
   font-family: "Press Start 2P", cursive;
   margin-bottom: 50px;
   text-shadow: -2px 0px 0px var(--black), 2px 0px 0px var(--black),
@@ -19,17 +19,6 @@
 /* button {
   width: 437px;
   height: 357px;
-}
-
-.card {
-  border: 2px solid #000000;
-  font-family: "Press Start 2P", cursive;
-  background: var(--lblue);
-}
-
-.homeCard {
-  width: 351px;
-height: 357px;
 }
 
 .card-header {
